finished styling the hero section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
@@ -10,22 +10,23 @@
     <div class="hero">
         <div class="nav-bar">
             <div class="logo">Header Logo</div>
-            <div class="links">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Login</a></li>
                 </ul>
+        </div>
+        <div class="content">
+            <div class="content-left">
+                <h1>This website is awesome</h1>
+                <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam sed voluptas voluptate delectus maxime rem culpa quibusdam esse qui nulla, nisi consequuntur id veniam accusantium officia accusamus corrupti. Doloribus, dolor?&Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <button>Sign up</button>
+            </div>
+            <div class="content-right">
+                <p>this is a placeholder for an image</p>
             </div>
         </div>
-        <div class="content-left">
-            <h1>This website is awesome</h1>
-            <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam sed voluptas voluptate delectus maxime rem culpa quibusdam esse qui nulla, nisi consequuntur id veniam accusantium officia accusamus corrupti. Doloribus, dolor?</p>
-            <button>Sign up</button>
-        </div>
-        <div class="content-right">
-            <img src="" alt="">
-        </div>
+        
     </div>
 </body>
 </html>
